[gd_scene load_steps=44 format=3 uid="uid://dueuyxfuq6h26"]

[ext_resource type="Theme" uid="uid://l28o45infhdy" path="res://scenes/ui/game.theme" id="1_pssa6"]
[ext_resource type="Script" path="res://scenes/ui/how_to_play/how_to_play.gd" id="2_eaneq"]
[ext_resource type="Texture2D" uid="uid://bb0sjpy03amb4" path="res://assets/graphics/lilbotty/body.png" id="2_jcbxi"]
[ext_resource type="Texture2D" uid="uid://bflg3tecba4t7" path="res://assets/graphics/lilbotty/faceplate.png" id="3_jjwch"]
[ext_resource type="Texture2D" uid="uid://bsymcyucej4c5" path="res://assets/graphics/bot_despawner/bot_despawner.png" id="4_2okcm"]
[ext_resource type="Texture2D" uid="uid://tc15wqna5h85" path="res://assets/graphics/ui/command_cards/CC_Dig.png" id="5_nby3g"]
[ext_resource type="Texture2D" uid="uid://ciq36xwhpclux" path="res://assets/graphics/ui/command_cards/CC_Mine.png" id="6_bwodc"]
[ext_resource type="Texture2D" uid="uid://bkrdngx1uc4wg" path="res://assets/graphics/ui/command_cards/CC_Tunnel.png" id="7_j1bvs"]
[ext_resource type="Texture2D" uid="uid://caa1xvoih5ws2" path="res://assets/graphics/ui/command_cards/CC_Dig_selected.png" id="8_2i6qj"]
[ext_resource type="Shader" path="res://shaders/palette_swap.gdshader" id="9_rknxn"]
[ext_resource type="Texture2D" uid="uid://bhcqekfkvaulm" path="res://assets/graphics/ui/command_cards/CC_Block.png" id="9_wcll6"]
[ext_resource type="Texture2D" uid="uid://jnxbia8jdfqe" path="res://assets/graphics/part.png" id="10_cndk3"]
[ext_resource type="Texture2D" uid="uid://h0jq4je3xbt7" path="res://assets/graphics/palettes/warm-ochre-4-1x.png" id="10_ertwy"]
[ext_resource type="Texture2D" uid="uid://dqirdbuy3voyc" path="res://assets/graphics/booster.png" id="11_4vuxv"]
[ext_resource type="Texture2D" uid="uid://cegodn1vv20tv" path="res://assets/graphics/trigger_terminal/TriggerTerminal.png" id="11_a8mn5"]
[ext_resource type="Texture2D" uid="uid://b7m2v4p5ab82w" path="res://assets/graphics/palettes/moonlight-gb-4-1x.png" id="11_lnooc"]
[ext_resource type="Texture2D" uid="uid://depdta8itx1gh" path="res://assets/graphics/ui/command_cards/CC_Boost.png" id="12_5lp2v"]
[ext_resource type="Script" path="res://scripts/nodes/ColorRectSwap.gd" id="12_31l44"]
[ext_resource type="Script" path="res://scripts/nodes/animated_texutre_rect.gd" id="12_ktda2"]
[ext_resource type="Texture2D" uid="uid://bqdm8ic3ve2ep" path="res://assets/graphics/ui/command_cards/CC_Build.png" id="13_ilxb6"]
[ext_resource type="Texture2D" uid="uid://83885bowehxx" path="res://assets/graphics/trigger_terminal/TermSymbol_Hold.png" id="13_jja23"]
[ext_resource type="Texture2D" uid="uid://dmigt3tmtjhke" path="res://assets/graphics/ui/command_cards/CC_Interact.png" id="13_riqex"]
[ext_resource type="Texture2D" uid="uid://cdrojurejw45m" path="res://assets/graphics/trigger_terminal/TermSymbol_Toggle.png" id="14_6x2uu"]
[ext_resource type="Texture2D" uid="uid://c5iyxdadl4ol" path="res://assets/graphics/lilbotty/explosion.png" id="18_g66pu"]
[ext_resource type="Texture2D" uid="uid://dh4a34f5d6rg4" path="res://assets/graphics/ui/speed_buttons/normal_pause.png" id="21_eq28g"]
[ext_resource type="Texture2D" uid="uid://bxy1k0xfu0rn2" path="res://assets/graphics/ui/speed_buttons/normal_1_speed.png" id="22_l2pr8"]
[ext_resource type="Texture2D" uid="uid://di6ajskt1taoa" path="res://assets/graphics/ui/speed_buttons/normal_1.5_speed.png" id="23_hbjj1"]
[ext_resource type="Texture2D" uid="uid://bs20rv8fc2ekf" path="res://assets/graphics/ui/speed_buttons/normal_2_speed.png" id="24_x2wk2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ti8gj"]
atlas = ExtResource("11_a8mn5")
region = Rect2(0, 0, 8, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_q5c78"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti8gj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qepjs"]
atlas = ExtResource("11_a8mn5")
region = Rect2(8, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4ux5"]
atlas = ExtResource("11_a8mn5")
region = Rect2(16, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6t5q"]
atlas = ExtResource("11_a8mn5")
region = Rect2(24, 0, 8, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_k5lkn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qepjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4ux5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6t5q")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lsdqa"]
atlas = ExtResource("18_g66pu")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uid82"]
atlas = ExtResource("18_g66pu")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvqsw"]
atlas = ExtResource("18_g66pu")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhvid"]
atlas = ExtResource("18_g66pu")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cedpt"]
atlas = ExtResource("18_g66pu")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioxyh"]
atlas = ExtResource("18_g66pu")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ummey"]
atlas = ExtResource("18_g66pu")
region = Rect2(120, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_1mbe7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uid82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvqsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhvid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cedpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioxyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ummey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsdqa")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t84uo"]
shader = ExtResource("9_rknxn")
shader_parameter/num_colors = 4
shader_parameter/invert = false
shader_parameter/base_palette = ExtResource("10_ertwy")
shader_parameter/new_palette = ExtResource("11_lnooc")

[node name="HowToPlay" type="Control"]
texture_filter = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_pssa6")
script = ExtResource("2_eaneq")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBC" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="TitleBar" type="PanelContainer" parent="MC/VBC"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/TitleBar"]
layout_mode = 2
text = "How to Play"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MC/VBC"]
layout_mode = 2

[node name="BTN_PrevPage" type="Button" parent="MC/VBC/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "< Page"

[node name="BTN_Back" type="Button" parent="MC/VBC/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "BACK"

[node name="BTN_NextPage" type="Button" parent="MC/VBC/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Page >"

[node name="Content" type="PanelContainer" parent="MC/VBC"]
custom_minimum_size = Vector2(475, 300)
layout_mode = 2

[node name="Page_01" type="MarginContainer" parent="MC/VBC/Content"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PageLayout" type="VBoxContainer" parent="MC/VBC/Content/Page_01"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/Content/Page_01/PageLayout"]
layout_mode = 2
text = "In each level of Li'l Bottys, your goal is
to guide a target number of lil bottys to
the level exit.

"

[node name="HBC_Botty" type="HBoxContainer" parent="MC/VBC/Content/Page_01/PageLayout"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MC/VBC/Content/Page_01/PageLayout/HBC_Botty"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
texture = ExtResource("2_jcbxi")
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="MC/VBC/Content/Page_01/PageLayout/HBC_Botty/TextureRect"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_jjwch")
stretch_mode = 4

[node name="Label" type="Label" parent="MC/VBC/Content/Page_01/PageLayout/HBC_Botty"]
layout_mode = 2
text = "<-- These are your Li'l Bottys!"

[node name="HBC_Exit" type="HBoxContainer" parent="MC/VBC/Content/Page_01/PageLayout"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/Content/Page_01/PageLayout/HBC_Exit"]
layout_mode = 2
size_flags_horizontal = 3
text = "These are the Exits -->"
horizontal_alignment = 2

[node name="TextureRect" type="TextureRect" parent="MC/VBC/Content/Page_01/PageLayout/HBC_Exit"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
texture = ExtResource("4_2okcm")
stretch_mode = 4

[node name="Page_02" type="MarginContainer" parent="MC/VBC/Content"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Layout" type="VBoxContainer" parent="MC/VBC/Content/Page_02"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/Content/Page_02/Layout"]
layout_mode = 2
text = "Each Lil Botty can be given commands
seperately.

To issue a command, click on the Lil Botty
you wish to give an order to. With a Lil
Botty selected, a command bar will appear
from the bottom of the screen.

Examples of commands include...
"

[node name="HBC_CommandsExample" type="HBoxContainer" parent="MC/VBC/Content/Page_02/Layout"]
layout_mode = 2

[node name="SpacerA" type="Control" parent="MC/VBC/Content/Page_02/Layout/HBC_CommandsExample"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="MC/VBC/Content/Page_02/Layout/HBC_CommandsExample"]
layout_mode = 2
texture = ExtResource("5_nby3g")
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="MC/VBC/Content/Page_02/Layout/HBC_CommandsExample"]
layout_mode = 2
texture = ExtResource("6_bwodc")
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="MC/VBC/Content/Page_02/Layout/HBC_CommandsExample"]
layout_mode = 2
texture = ExtResource("7_j1bvs")
stretch_mode = 4

[node name="SpacerB" type="Control" parent="MC/VBC/Content/Page_02/Layout/HBC_CommandsExample"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MC/VBC/Content/Page_02/Layout"]
layout_mode = 2
text = "(description later)

and commands can either be"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MC/VBC/Content/Page_02/Layout"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/Content/Page_02/Layout/HBoxContainer"]
layout_mode = 2
text = "[ OFF ]"

[node name="TextureRect" type="TextureRect" parent="MC/VBC/Content/Page_02/Layout/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_nby3g")
stretch_mode = 4

[node name="Label2" type="Label" parent="MC/VBC/Content/Page_02/Layout/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "or"
horizontal_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="MC/VBC/Content/Page_02/Layout/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_2i6qj")
stretch_mode = 4

[node name="Label3" type="Label" parent="MC/VBC/Content/Page_02/Layout/HBoxContainer"]
layout_mode = 2
text = "[ ON ]"

[node name="Page_03" type="MarginContainer" parent="MC/VBC/Content"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Layout" type="VBoxContainer" parent="MC/VBC/Content/Page_03"]
layout_mode = 2

[node name="CMD_Dig" type="HBoxContainer" parent="MC/VBC/Content/Page_03/Layout"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MC/VBC/Content/Page_03/Layout/CMD_Dig"]
layout_mode = 2
texture = ExtResource("5_nby3g")
stretch_mode = 4

[node name="Label" type="Label" parent="MC/VBC/Content/Page_03/Layout/CMD_Dig"]
layout_mode = 2
size_flags_vertical = 1
text = "DIG
Lil Botty will attempt to dig
downwards on diggable terrain"

[node name="CMD_Mine" type="HBoxContainer" parent="MC/VBC/Content/Page_03/Layout"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/Content/Page_03/Layout/CMD_Mine"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "MINE
Lil Botty will attempt to dig
horizontally through diggable
terrain."
horizontal_alignment = 2

[node name="TextureRect" type="TextureRect" parent="MC/VBC/Content/Page_03/Layout/CMD_Mine"]
layout_mode = 2
texture = ExtResource("6_bwodc")
stretch_mode = 4

[node name="CMD_Tunnel" type="HBoxContainer" parent="MC/VBC/Content/Page_03/Layout"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MC/VBC/Content/Page_03/Layout/CMD_Tunnel"]
layout_mode = 2
texture = ExtResource("7_j1bvs")
stretch_mode = 4

[node name="Label" type="Label" parent="MC/VBC/Content/Page_03/Layout/CMD_Tunnel"]
layout_mode = 2
size_flags_vertical = 1
text = "TUNNEL
Lil Botty will attempt
to dig diagnally through diggable
terrain"

[node name="HSeparator" type="HSeparator" parent="MC/VBC/Content/Page_03/Layout"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/Content/Page_03/Layout"]
layout_mode = 2
text = "Each of these commands will automatically
end if the Lil Botty starts falling."

[node name="Page_04" type="MarginContainer" parent="MC/VBC/Content"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Layout" type="VBoxContainer" parent="MC/VBC/Content/Page_04"]
layout_mode = 2

[node name="CMD_Block" type="HBoxContainer" parent="MC/VBC/Content/Page_04/Layout"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MC/VBC/Content/Page_04/Layout/CMD_Block"]
layout_mode = 2
texture = ExtResource("9_wcll6")
stretch_mode = 4

[node name="Label" type="Label" parent="MC/VBC/Content/Page_04/Layout/CMD_Block"]
layout_mode = 2
size_flags_vertical = 1
text = "BLOCK
When active, Lil Botty will stand
in place and act like a wall that
other Lil Bottys will bounce off of."

[node name="Page_05" type="MarginContainer" parent="MC/VBC/Content"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Layout" type="VBoxContainer" parent="MC/VBC/Content/Page_05"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Terminals" type="HBoxContainer" parent="MC/VBC/Content/Page_05/Layout"]
layout_mode = 2

[node name="IdleTermTexture" type="TextureRect" parent="MC/VBC/Content/Page_05/Layout/Terminals"]
custom_minimum_size = Vector2(32, 64)
layout_mode = 2
size_flags_vertical = 4
texture = SubResource("AtlasTexture_ti8gj")
expand_mode = 1
stretch_mode = 5
script = ExtResource("12_ktda2")
sprite_frames = SubResource("SpriteFrames_q5c78")
auto_play = true

[node name="Label" type="Label" parent="MC/VBC/Content/Page_05/Layout/Terminals"]
layout_mode = 2
size_flags_horizontal = 3
text = "TERMINALS
Some levels contain terminals.
Terminals open doors that may exist
within a level."

[node name="ActiveTermTexture" type="TextureRect" parent="MC/VBC/Content/Page_05/Layout/Terminals"]
custom_minimum_size = Vector2(32, 64)
layout_mode = 2
size_flags_vertical = 4
texture = SubResource("AtlasTexture_qepjs")
expand_mode = 1
stretch_mode = 5
script = ExtResource("12_ktda2")
sprite_frames = SubResource("SpriteFrames_k5lkn")
auto_play = true

[node name="Label" type="Label" parent="MC/VBC/Content/Page_05/Layout"]
layout_mode = 2
text = "Above every terminal is a symbol which
identifies a terminal as one of two types."

[node name="HoldTerminals" type="HBoxContainer" parent="MC/VBC/Content/Page_05/Layout"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MC/VBC/Content/Page_05/Layout/HoldTerminals"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("13_jja23")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="MC/VBC/Content/Page_05/Layout/HoldTerminals"]
layout_mode = 2
size_flags_vertical = 0
text = "Terminals with this symbol will only
remain active while a Lil Botty is
interactive with it."

[node name="ToggleTerminals" type="HBoxContainer" parent="MC/VBC/Content/Page_05/Layout"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/Content/Page_05/Layout/ToggleTerminals"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Terminals with the half circle symbol
will toggle on or off with each
seperate interaction from a Lil Botty."

[node name="TextureRect" type="TextureRect" parent="MC/VBC/Content/Page_05/Layout/ToggleTerminals"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("14_6x2uu")
expand_mode = 1
stretch_mode = 4

[node name="Page_06" type="MarginContainer" parent="MC/VBC/Content"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Layout" type="VBoxContainer" parent="MC/VBC/Content/Page_06"]
layout_mode = 2

[node name="Command" type="HBoxContainer" parent="MC/VBC/Content/Page_06/Layout"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MC/VBC/Content/Page_06/Layout/Command"]
layout_mode = 2
texture = ExtResource("13_riqex")
stretch_mode = 4

[node name="Label" type="Label" parent="MC/VBC/Content/Page_06/Layout/Command"]
layout_mode = 2
size_flags_vertical = 0
text = "When a Lil Botty is near a Terminal
the Interact command button will
become available.

When selected, the Lil Botty will
turn towards the terminal
activating it.

Whether a terminal stays activate
after a Lil Botty stops interacting
depends on the symbol found above
the terminal."

[node name="Page_07" type="MarginContainer" parent="MC/VBC/Content"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Layout" type="VBoxContainer" parent="MC/VBC/Content/Page_07"]
layout_mode = 2

[node name="Label2" type="Label" parent="MC/VBC/Content/Page_07/Layout"]
layout_mode = 2
text = "There are two pickups in the game...

"

[node name="Pickups" type="HBoxContainer" parent="MC/VBC/Content/Page_07/Layout"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/Content/Page_07/Layout/Pickups"]
layout_mode = 2
size_flags_vertical = 1
text = "PARTS"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MC/VBC/Content/Page_07/Layout/Pickups"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("10_cndk3")
stretch_mode = 4

[node name="Label2" type="Label" parent="MC/VBC/Content/Page_07/Layout/Pickups"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "and"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="MC/VBC/Content/Page_07/Layout/Pickups"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("11_4vuxv")
stretch_mode = 4

[node name="Label3" type="Label" parent="MC/VBC/Content/Page_07/Layout/Pickups"]
layout_mode = 2
size_flags_vertical = 1
text = "BOOSTER"
vertical_alignment = 1

[node name="Label" type="Label" parent="MC/VBC/Content/Page_07/Layout"]
layout_mode = 2
text = "
A Lil Botty can only have one pickup at
any time, and the pickup will give the
Lil Botty a new command"

[node name="Page_08" type="MarginContainer" parent="MC/VBC/Content"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Layout" type="VBoxContainer" parent="MC/VBC/Content/Page_08"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="CMD_Booster" type="HBoxContainer" parent="MC/VBC/Content/Page_08/Layout"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MC/VBC/Content/Page_08/Layout/CMD_Booster"]
layout_mode = 2
texture = ExtResource("12_5lp2v")
stretch_mode = 4

[node name="Label" type="Label" parent="MC/VBC/Content/Page_08/Layout/CMD_Booster"]
layout_mode = 2
size_flags_vertical = 1
text = "BOOSTER
A one use command. The Lil Botty
will be boosted up and over for a
brief period of time. Once the
boost has ended, the Lil Botty will
loose the Booster pickup."

[node name="CMD_Build" type="HBoxContainer" parent="MC/VBC/Content/Page_08/Layout"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/Content/Page_08/Layout/CMD_Build"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "BUILD
The Parts pickup gives the Lil
Botty the ability to build bridges
in empty space and over spikes.
ONLY -- 12 -- PARTS are given. Once
used, the Lil Botty looses the
Parts Pickup."
horizontal_alignment = 2

[node name="TextureRect" type="TextureRect" parent="MC/VBC/Content/Page_08/Layout/CMD_Build"]
layout_mode = 2
texture = ExtResource("13_ilxb6")
stretch_mode = 4

[node name="Page_09" type="MarginContainer" parent="MC/VBC/Content"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Layout" type="VBoxContainer" parent="MC/VBC/Content/Page_09"]
layout_mode = 2

[node name="CMD_Pause" type="HBoxContainer" parent="MC/VBC/Content/Page_09/Layout"]
layout_mode = 2

[node name="Button" type="Button" parent="MC/VBC/Content/Page_09/Layout/CMD_Pause"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"ButtonAlt"

[node name="AnimatedTextureRect" type="TextureRect" parent="MC/VBC/Content/Page_09/Layout/CMD_Pause/Button"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = SubResource("AtlasTexture_lsdqa")
expand_mode = 1
stretch_mode = 5
script = ExtResource("12_ktda2")
sprite_frames = SubResource("SpriteFrames_1mbe7")
auto_play = true

[node name="Label" type="Label" parent="MC/VBC/Content/Page_09/Layout/CMD_Pause"]
layout_mode = 2
size_flags_vertical = 1
text = "DETONATE
When the required number of Lil Bottys
have been saved, the Detonate button
will appear at the far right of the
command bar. Clicking the Detonate
button will destroy all Lil Bottys
that remain (swiftly ending the level)

"

[node name="Page_10" type="MarginContainer" parent="MC/VBC/Content"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Layout" type="VBoxContainer" parent="MC/VBC/Content/Page_10"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MC/VBC/Content/Page_10/Layout"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TexPause" type="TextureRect" parent="MC/VBC/Content/Page_10/Layout/HBoxContainer"]
layout_mode = 2
texture = ExtResource("21_eq28g")

[node name="TexSpeed1" type="TextureRect" parent="MC/VBC/Content/Page_10/Layout/HBoxContainer"]
layout_mode = 2
texture = ExtResource("22_l2pr8")

[node name="TexSpeed1_5" type="TextureRect" parent="MC/VBC/Content/Page_10/Layout/HBoxContainer"]
layout_mode = 2
texture = ExtResource("23_hbjj1")

[node name="TexSpeed2" type="TextureRect" parent="MC/VBC/Content/Page_10/Layout/HBoxContainer"]
layout_mode = 2
texture = ExtResource("24_x2wk2")

[node name="Label" type="Label" parent="MC/VBC/Content/Page_10/Layout"]
layout_mode = 2
text = "Above and to the left of the Command Bar,
and always visible, are the game speed
options.

From left to right, these are...
PAUSE - The game will pause, but you will
   still be able to scroll around the
   level.

NORMAL - The game's normal play speed

X1.5 - The game will play at x1.5 the
   Normal speed.

x2 - The game will play at x2 the Normal
   speed."

[node name="Page_11" type="MarginContainer" parent="MC/VBC/Content"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Layout" type="VBoxContainer" parent="MC/VBC/Content/Page_11"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/Content/Page_11/Layout"]
layout_mode = 2
text = "You can look around a level at any time by
simply holding down the Right Mouse Button
and dragging across the screen!"

[node name="ColorRectSwap" type="ColorRect" parent="MC"]
material = SubResource("ShaderMaterial_t84uo")
layout_mode = 2
script = ExtResource("12_31l44")

[connection signal="pressed" from="MC/VBC/HBoxContainer/BTN_PrevPage" to="." method="_on_btn_prev_page_pressed"]
[connection signal="pressed" from="MC/VBC/HBoxContainer/BTN_Back" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="MC/VBC/HBoxContainer/BTN_NextPage" to="." method="_on_btn_next_page_pressed"]
